# listen

./: .env.example  .gitignore  Makefile  README.md  RELEASE.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: DOUBLE_INIT_FIX.md  GUI_ERROR_LOGGING.md  LOGGING.md  TROUBLESHOOTING.md
src/listen_tools/: __init__.py  improve.py  list_models.py  listen_app.py  logger.py  text_improver.py
tests/: README.md  test_error_logging.py  test_initialization.py  test_text_improver.py  test_text_improver_integration.py
